--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youtube-crawler",
+  "name": "youtube-detail-crawler",
   "version": "0.0.1",
   "description": "* Youtube Channel Detail Crawler by each channel with Node.js, Youtube-API Data v3 * Will keep optimizing & Codes more readable",
   "main": "index.js",
