--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async-retry": "^1.2.1",
     "config": "^1.30.0",
     "date-utils": "^1.2.21",
+    "elasticsearch": "^14.2.2",
     "mkdirp": "^0.5.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
