--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-utils": "^1.2.21",
     "elasticsearch": "^14.2.2",
     "mkdirp": "^0.5.1",
+    "p-queue": "^2.4.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
   }
