--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "homepage": "https://github.com/TaeBbong/youtube_crawler#readme",
   "dependencies": {
     "async-retry": "^1.2.1",
+    "body-parser": "^1.18.3",
     "config": "^1.30.0",
     "date-utils": "^1.2.21",
     "elasticsearch": "^14.2.2",
+    "express": "^4.16.3",
     "mkdirp": "^0.5.1",
+    "mysql": "^2.15.0",
     "p-queue": "^2.4.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
